Update ExportBus